--- a/Hosts/Common/CommonUI/StatusBar/NotificationIcon.xaml
+++ b/Hosts/Common/CommonUI/StatusBar/NotificationIcon.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl 
-  x:Class="R4nd0mApps.TddStud10.Hosts.Common.StatusBarNotificationIcon"
+  x:Class="R4nd0mApps.TddStud10.Hosts.Common.StatusBar.NotificationIcon"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
