Feature #8- ConveringTests user control done. Next up is wiring it up

--- a/Hosts/Console/TddStud10App/App.xaml
+++ b/Hosts/Console/TddStud10App/App.xaml
@@ -10,5 +10,9 @@
       xmlns:vm="clr-namespace:R4nd0mApps.TddStud10.Hosts.Console.TddStud10App.ViewModel"
       x:Key="Locator" 
       d:IsDataSource="True" />
+    <vm:ViewModelLocator 
+      xmlns:vm="clr-namespace:R4nd0mApps.TddStud10.Hosts.Common.CoveringTests.ViewModel;assembly=R4nd0mApps.TddStud10.Hosts.CommonUI"
+      x:Key="CoveringTestsVMLocator" 
+      d:IsDataSource="True" />
   </Application.Resources>
 </Application>
